[package]
name = "rpad"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.24"
egui = "0.24"
rfd = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true  # Remove debug symbols
